--- a/Homework/Homework4.ipynb
+++ b/Homework/Homework4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "             x: array([2., 6.])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,10 +160,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===============The result of question 1 is ================\n",
+      "           con: array([0., 0., 0.])\n",
+      " crossover_nit: 0\n",
+      "         eqlin:  marginals: array([-14000., -12000., -10000.])\n",
+      "  residual: array([0., 0., 0.])\n",
+      "           fun: -6892222.222222222\n",
+      "       ineqlin:  marginals: array([-0.11111111, -0.66666667, -0.        ])\n",
+      "  residual: array([      0.        ,       0.        , 6222222.22222222])\n",
+      "         lower:  marginals: array([1777.77777778, 1444.44444444,    0.        ,  666.66666667,\n",
+      "        666.66666667,    0.        ,    0.        ,    0.        ,\n",
+      "          0.        ])\n",
+      "  residual: array([  0.        ,   0.        ,  21.11111111,   0.        ,\n",
+      "         0.        ,  21.66666667, 100.        , 300.        ,\n",
+      "       157.22222222])\n",
+      "       message: 'Optimization terminated successfully. (HiGHS Status 7: Optimal)'\n",
+      "           nit: 5\n",
+      "         slack: array([      0.        ,       0.        , 6222222.22222222])\n",
+      "        status: 0\n",
+      "       success: True\n",
+      "         upper:  marginals: array([0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+      "  residual: array([inf, inf, inf, inf, inf, inf, inf, inf, inf])\n",
+      "             x: array([  0.        ,   0.        ,  21.11111111,   0.        ,\n",
+      "         0.        ,  21.66666667, 100.        , 300.        ,\n",
+      "       157.22222222])\n",
+      "===============The result of question 2 is ================\n",
+      "           con: array([0., 0., 0.])\n",
+      " crossover_nit: 0\n",
+      "         eqlin:  marginals: array([-13200., -11400., -10800.])\n",
+      "  residual: array([0., 0., 0.])\n",
+      "           fun: -6830500.0\n",
+      "       ineqlin:  marginals: array([-0.        , -0.15      , -0.14285714])\n",
+      "  residual: array([5106250.,       0.,       0.])\n",
+      "         lower:  marginals: array([   0.        ,    0.        ,    0.        ,    0.        ,\n",
+      "        180.        ,  900.        ,    0.        ,   85.71428571,\n",
+      "       1371.42857143])\n",
+      "  residual: array([ 58.75, 300.  , 200.  ,  16.25,   0.  ,   0.  ,  25.  ,   0.  ,\n",
+      "         0.  ])\n",
+      "       message: 'Optimization terminated successfully. (HiGHS Status 7: Optimal)'\n",
+      "           nit: 5\n",
+      "         slack: array([5106250.,       0.,       0.])\n",
+      "        status: 0\n",
+      "       success: True\n",
+      "         upper:  marginals: array([0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+      "  residual: array([inf, inf, inf, inf, inf, inf, inf, inf, inf])\n",
+      "             x: array([ 58.75, 300.  , 200.  ,  16.25,   0.  ,   0.  ,  25.  ,   0.  ,\n",
+      "         0.  ])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use linear programming to solve the problem\n",
+    "\n",
+    "c = np.array([-11000, -9500, -9000, -8000, -6800, -6000, -14000, -12000, -10000])\n",
+    "A = np.array([[-11000, -9500, -9000, 0,0,0,0,0,0],\\\n",
+    "                [0,0,0,-8000, -6800, -6000,0,0,0],\\\n",
+    "                    [0,0,0,0,0,0,-14000, -12000, -10000]])\n",
+    "b = np.array([-190000, -130000, -350000])\n",
+    "A_eq = np.array([[1,0,0,1,0,0,1,0,0],\\\n",
+    "                    [0,1,0,0,1,0,0,1,0],\\\n",
+    "                        [0,0,1,0,0,1,0,0,1]])\n",
+    "b_eq = np.array([100, 300, 200])\n",
+    "bounds = ((0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None), (0, None))\n",
+    "result = linear_programming(c,A,b,A_eq,b_eq,bounds)\n",
+    "print(f'===============The result of question 1 is ================')\n",
+    "print(result)\n",
+    "print(f'===============The result of question 2 is ================')\n",
+    "c_ = np.array([-11000*1.2, -9500*1.2, -9000*1.2, -8000*1.5, -6800*1.5, -6000*1.5, -14000*0.8, -12000*0.8, -10000*0.8])\n",
+    "result2 = linear_programming(c_,A,b,A_eq,b_eq,bounds)\n",
+    "print(result2)"
+   ]
   }
  ],
  "metadata": {
