--- a/Homework/Homework3.ipynb
+++ b/Homework/Homework3.ipynb
@@ -16,7 +16,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.6"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:41:22) [Clang 13.0.1 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
