--- a/Homework/Clustering.ipynb
+++ b/Homework/Clustering.ipynb
@@ -257,8 +257,8 @@
     "z = linkage(data, \"average\") \n",
     "### fig is used to draw a figure, ax is used to draw a subplot\n",
     "fig, ax = plt.subplots(figsize=(8,8))\n",
-    "### dendrogram is used to draw a dendrogram\n",
-    "### font size of the leaf node is the same as the font size of the x-axis\n",
+    "### Question: What is dendrogram?\n",
+    "### Answer: https://docs.scipy.org/doc/scipy/reference/generated/scipy.cluster.hierarchy.dendrogram.html\n",
     "dendrogram(z, leaf_font_size=14)\n",
     "plt.title(\"Hierachial Clustering Dendrogram\")\n",
     "plt.xlabel(\"Cluster label\")\n",
@@ -266,6 +266,27 @@
     "### plt.axhline is used to draw a horizontal line\n",
     "plt.axhline(y=10) \n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$u(x, y, t)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binarySearch():\n",
+    "    ## 1.确定搜索范围\n",
+    "    range = [0, 100]\n",
+    "    ## 2.确定搜索次数\n",
+    "    "
    ]
   }
  ],
