--- a/Homework/TOPSIS+Entropy_weight.ipynb
+++ b/Homework/TOPSIS+Entropy_weight.ipynb
@@ -227,6 +227,12 @@
     "weights = calc_weights(data)\n",
     "print(\"The weights are: {}\".format(weights))\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
