--- a/模型相关/评价模型.ipynb
+++ b/模型相关/评价模型.ipynb
@@ -270,10 +270,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 21  27  33]\n",
+      " [ 57  72  87]\n",
+      " [ 93 117 141]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### matrix multiplication\n",
+    "matrix_1 = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "matrix_2 = [[4,5,6],[7,8,9],[1,2,3]]\n",
+    "multiplied_matrix = np.dot(matrix_1, matrix_2)\n",
+    "print(multiplied_matrix)"
+   ]
   }
  ],
  "metadata": {
