蒙特卡洛模拟

--- a/模型相关/评价模型.ipynb
+++ b/模型相关/评价模型.ipynb
@@ -21,7 +21,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 主成分分析（PCA）：降维，数据压缩，噪音消除\n",
+    "### 主成分分析（PCA）：降维"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "降维基本思想：提取数据里最主要的方面，忽略其他方面（即降维）\n",
     "\n",
     "基本方法：基变换\n",
@@ -119,7 +127,7 @@
     "$$\n",
     "\\text { 贡献率 }=\\frac{\\lambda_{\\mathrm{i}}}{\\sum_{\\mathrm{k}=1}^{\\mathrm{p}} \\lambda_{\\mathrm{k}}}, \\quad \\text { 累加贡献率 }=\\frac{\\sum_{\\mathrm{k}=1}^{\\mathrm{i}} \\lambda_{\\mathrm{k}}}{\\sum_{\\mathrm{k}=1}^{\\mathrm{p}} \\lambda_{\\mathrm{k}}}, \\quad(\\mathrm{i}=1,2, \\cdots, \\mathrm{p})\n",
     "$$\n",
-    "5. 一般我们取累积贡献率到的80%之前的指标（即贡献率之和已经超过80%的指标）\n",
+    "5. 一般我们取累积贡献率到的80%-85%之前的指标（即贡献率之和已经超过80%的指标）\n",
     "6. 可以根据对原始数据的成分的负荷（eigenvector对应位置数字的大小情况）来归纳新的成分意义（可以参照下文代码的例子）\n",
     "$$\n",
     "\\text { 第i个主成分： } \\mathrm{F}_{\\mathrm{i}}=\\mathrm{a}_{1 \\mathrm{i}} \\mathrm{X}_1+\\mathrm{a}_{2 \\mathrm{i}} \\mathrm{X}_2+\\cdots+\\mathrm{a}_{\\mathrm{pi}} \\mathrm{X}_{\\mathrm{p}}\n",
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -200,21 +208,21 @@
       "-----------------\n",
       "The accumulated contribution of each principal component is [0.69063568 0.93525354 0.97099903 0.98015237 1.        ]\n",
       "-----------------\n",
-      "The principal components are [[ 0.66701255 -0.07769953  0.22601314]\n",
-      " [-0.37447048  0.83884504  0.48207562]\n",
-      " [-3.75614329 -2.1735795  -0.03896525]\n",
-      " [ 2.2827183   1.17615998  0.10886999]\n",
-      " [-2.52791503  0.84488665 -0.13348907]\n",
-      " [-0.76348234  1.26625679  0.04665948]\n",
-      " [-0.9896892   0.54100904  0.36969934]\n",
-      " [-1.31409197  1.04623075 -0.18920877]\n",
-      " [ 0.56040823  0.51439486 -0.35582436]\n",
-      " [ 3.78023389 -1.63035825 -0.39668517]\n",
-      " [-0.59954801 -0.07959016 -0.82348731]\n",
-      " [ 2.0183348   0.48813021  0.61307427]\n",
-      " [ 0.79389686  0.2458446  -0.72097197]\n",
-      " [-1.01137617 -1.28231499  0.45061122]\n",
-      " [ 1.23411185 -1.7182155   0.36162885]]\n"
+      "The principal components are [[ 0.66701255 -0.07769953]\n",
+      " [-0.37447048  0.83884504]\n",
+      " [-3.75614329 -2.1735795 ]\n",
+      " [ 2.2827183   1.17615998]\n",
+      " [-2.52791503  0.84488665]\n",
+      " [-0.76348234  1.26625679]\n",
+      " [-0.9896892   0.54100904]\n",
+      " [-1.31409197  1.04623075]\n",
+      " [ 0.56040823  0.51439486]\n",
+      " [ 3.78023389 -1.63035825]\n",
+      " [-0.59954801 -0.07959016]\n",
+      " [ 2.0183348   0.48813021]\n",
+      " [ 0.79389686  0.2458446 ]\n",
+      " [-1.01137617 -1.28231499]\n",
+      " [ 1.23411185 -1.7182155 ]]\n"
      ]
     }
    ],
@@ -235,7 +243,7 @@
     "print(\"The accumulated contribution of each principal component is {}\".format(accumulated_contribution))\n",
     "print(\"-----------------\")\n",
     "###Sixth calculate the principal components by multiplying the normalized data by the first three eigenvectors\n",
-    "principal_components = np.dot(data_normalized, eigenvectors[:, 0:3])\n",
+    "principal_components = np.dot(data_normalized, eigenvectors[:, 0:2])\n",
     "print(\"The principal components are {}\".format(principal_components))\n",
     "###Now finish the PCA process"
    ]
@@ -285,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +322,7 @@
        "       [100. , 100. ,  92.9, 100. ,  90. , 100. , 100. , 100. , 100. ]])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
