--- a/模型相关/回归.ipynb
+++ b/模型相关/回归.ipynb
@@ -28,17 +28,19 @@
     "    3. 通过最小二乘法得到拟合的测试数据（1.2，1.3）\n",
     "    4. 根据拟合数据绘制拟合曲线，并得到回归方程的表达式（1.4，1.5）\n",
     "2. 对回归模型进行显著性检验。\n",
-    "    1. 相关系数检验，检验线性相关程度的大小\n",
-    "    2. F检验法（这两种检验方法可以任意选）\n",
-    "    3. 残差分析\n",
-    "    4. 对于多元回归分析还要进行因素的主次排序\n",
+    "    1. 平均绝对误差(MAE）\n",
+    "    2. 均方误差（MSE）\n",
+    "    3. 均方根误差（RMSE）\n",
+    "    3. 平均绝对百分比误差（MAPE）\n",
+    "    4. $R^2$评价指标\n",
+    "    5. F检验法\n",
     "\n",
     "（如果检验结果表示此模型的显著性很差，应当另选回归模型）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +78,7 @@
        "Text(0.5, 1.0, 'Scatterplot of sample data')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -117,19 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-4 {color: black;background-color: white;}#sk-container-id-4 pre{padding: 0;}#sk-container-id-4 div.sk-toggleable {background-color: white;}#sk-container-id-4 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-4 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-4 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-4 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-4 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-4 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-4 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-4 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-4 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-4 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-4 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-4 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-4 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-4 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-4 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-4 div.sk-item {position: relative;z-index: 1;}#sk-container-id-4 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-4 div.sk-item::before, #sk-container-id-4 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-4 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-4 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-4 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-4 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-4 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-4 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-4 div.sk-label-container {text-align: center;}#sk-container-id-4 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-4 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-4\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" checked><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "LinearRegression()"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +183,7 @@
        "Text(0.5, 1.0, 'Linear regression fit')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -248,6 +250,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.评估简单线性回归模型\n",
+    "直接调用sklearn库的评价方法$R^2$，数值越接近1越好\n",
+    "\n",
+    "其余方法后面介绍"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-square: 0.98533\n"
+     ]
+    }
+   ],
+   "source": [
+    "r2 = model.score(xtrain[:,np.newaxis],ytrain)\n",
+    "print(\"R-square: %.5f\" % r2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 多元线性回归\n",
     "简化步骤，具体步骤与简单线性回归一致"
    ]
@@ -263,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -342,14 +373,166 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 模型评估方法"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 平均绝对误差(MAE）\n",
+    "MAE用来衡量预测值与真实值之间的平均绝对误差，MAE越小表示模型越好，其定义如下：\n",
+    "\n",
+    "${MAE}=\\frac{1}{n}\\sum_{i=1}^{n}|y_{i}-{y}^{\\prime}_{i}|,\\ \\in\\left[0,+\\infty\\right)\\ \\left(1\\right)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MAE(y, y_pre):\n",
+    "    return np.mean(np.abs(y - y_pre))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 均方误差（MSE）\n",
+    "MSE也是回归中最普通的评价指标，MSE越小表示模型越好，其定义如下：\n",
+    "\n",
+    "$MSE=\\frac{1}{n}\\sum_{i=1}^{n}(y_{i}-{y}^{\\prime}_{i})^{2},~\\in[0,+\\infty)~~(2)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MSE(y, y_pre):\n",
+    "    return np.mean((y - y_pre) ** 2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 均方根误差（RMSE）\n",
+    "RMSE是在MSE的基础之上开根号而来，也是量化回归模型整体误差的标准方法\n",
+    "\n",
+    "RMSE越小表示模型越好，其定义如下：\n",
+    "\n",
+    "$R M S E=\\sqrt{\\frac{1}{n}\\sum_{i=1}^{n}(y_{i}-{y}^{\\prime}_{i})^{2}},\\ \\in\\,[0,+\\infty)\\ \\ \\ (3)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def RMSE(y, y_pre):\n",
+    "    return np.sqrt(MSE(y, y_pre))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 平均绝对百分比误差（MAPE）\n",
+    "MAPE和MAE类似，只是在MAE的基础上做了标准化处理，MAPE越小表示模型越好，其定义如下：\n",
+    "\n",
+    "$M A P E=\\frac{100\\%}{n}\\sum_{i=1}^{n}\\left|\\frac{y_{i}-{y}^{\\prime}_{i}}{y_{i}}\\right|,\\;\\;\\in\\left[0,+\\infty\\right)\\;\\;(4)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MAPE(y, y_pre):\n",
+    "    return np.mean(np.abs((y - y_pre) / y))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $R^2$评价指标\n",
+    "sklearn在实现线性回归时默认采用了该指标，越接近1表示模型越好，其定义如下：\n",
+    "\n",
+    "$R^{2}\\,=\\,1\\,-\\,\\frac{\\sum_{i=1}^{n}(y_{i}-{y}^{\\prime}_{i})^{2}}{\\sum_{i=1}^{n}(y_{i}-\\overline{{y}})^{2}}\\,\\in\\,[0,1]\\;\\;\\;\\;(5)$\n",
+    "\n",
+    "其中 $\\overline{{y}}$ 表示真实值的平均值。$R^2$的好处在于其结果进行了归一化，更容易看出模型间的差距。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def R2(y, y_pre):\n",
+    "    u = np.sum((y - y_pre) ** 2)\n",
+    "    v = np.sum((y - np.mean(y)) ** 2)\n",
+    "    return 1 - (u / v)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 评估之前多元线性回归的模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 1.1866063687193673e-14\n",
+      "MSE: 2.1141472259923116e-28\n",
+      "RMSE: 1.4540107379219425e-14\n",
+      "MAPE: 4.67988884430622e-16\n",
+      "R2: 1.0 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pre = model.predict(df[['b1','b2','b3','b4']]) # ytest, forecast data\n",
+    "y = df['y'] # ytrain, Raw data\n",
+    "\n",
+    "print(\"MAE:\", MAE(y, y_pre))\n",
+    "print(\"MSE:\", MSE(y, y_pre))\n",
+    "print(\"RMSE:\", RMSE(y, y_pre))\n",
+    "print(\"MAPE:\", MAPE(y, y_pre))\n",
+    "print(\"R2:\", R2(y, y_pre), model.score(df[['b1','b2','b3','b4']],y))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x1test = np.linspace(0,10,1000)\n",
-    "ytest = model.predict(xtest[:,np.newaxis])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
