day 5 change final

--- a/模型相关/回归.ipynb
+++ b/模型相关/回归.ipynb
@@ -25,7 +25,7 @@
     "$$\n",
     "假设特征和结果都满足线性，即不大于一次方。获得 $\\beta$ 和 $\\epsilon$ 之后，模型就得以确定。\n",
     "## 核心思想\n",
-    "逼近、拟合，大量数据进行统计分析，从而获得回归方程"
+    "大量数据进行统计分析，从而获得回归方程、获得预测的估计值"
    ]
   },
   {
@@ -34,6 +34,25 @@
    "metadata": {},
    "source": [
     "## 基本步骤"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 确定回归模型属于那种基本类型，然后通过计算得到回归方程的表达式\n",
+    "    1. 根据试验数据画出散点图（1.1）\n",
+    "    2. 确定经验公式的函数类型（1.1）\n",
+    "    3. 通过最小二乘法得到拟合的测试数据（1.2，1.3）\n",
+    "    4. 根据拟合数据绘制拟合曲线，并得到回归方程的表达式（1.4，1.5）\n",
+    "2. 对回归模型进行显著性检验。\n",
+    "    1. 相关系数检验，检验线性相关程度的大小\n",
+    "    2. F检验法（这两种检验方法可以任意选）\n",
+    "    3. 残差分析\n",
+    "    4. 对于多元回归分析还要进行因素的主次排序\n",
+    "\n",
+    "（如果检验结果表示此模型的显著性很差，应当另选回归模型）"
    ]
   },
   {
