补充：多元回归求偏导的部分公式

--- a/模型相关/回归.ipynb
+++ b/模型相关/回归.ipynb
@@ -359,7 +359,15 @@
     "其中，$\\boldsymbol{x}$ 为 $m \\times n$，$\\boldsymbol{\\beta}$ 为 $n \\times 1$\n",
     "\n",
     "于是目标损失函数可表示为：\n",
-    "$$E(\\beta)=\\|\\boldsymbol{\\hat y}-\\boldsymbol{y}\\|^{2}=\\|\\boldsymbol{x}\\boldsymbol{\\beta}-\\boldsymbol{y}\\|^{2}=(\\boldsymbol{x}\\boldsymbol{\\beta}-\\boldsymbol{y})^{{{T}}}(\\boldsymbol{x}\\boldsymbol{\\beta}-\\boldsymbol{y})$$\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "E(\\beta)=&\\|\\boldsymbol{\\hat y}-\\boldsymbol{y}\\|^{2}=\\|\\boldsymbol{x}\\boldsymbol{\\beta}-\\boldsymbol{y}\\|^{2}=(\\boldsymbol{x}\\boldsymbol{\\beta}-\\boldsymbol{y})^{{{T}}}(\\boldsymbol{x}\\boldsymbol{\\beta}-\\boldsymbol{y}) = (\\boldsymbol{\\beta}^T\\boldsymbol{x}^T-\\boldsymbol{y}^T)(\\boldsymbol{x}\\boldsymbol{\\beta}-\\boldsymbol{y}) \\\\\n",
+    "=&\\boldsymbol{y}^T\\boldsymbol{y}-\\boldsymbol{y}^T\\boldsymbol{x}\\boldsymbol{\\beta}-\\boldsymbol{\\beta}^T\\boldsymbol{x}^T\\boldsymbol{y}+\\boldsymbol{\\beta}^T\\boldsymbol{x}^T\\boldsymbol{x}\\boldsymbol{\\beta} \\\\\n",
+    "=&\\boldsymbol{y}^T\\boldsymbol{y}-2\\boldsymbol{\\beta}^T\\boldsymbol{x}^T\\boldsymbol{y}+\\boldsymbol{\\beta}^T\\boldsymbol{x}^T\\boldsymbol{x}\\boldsymbol{\\beta} \\\\\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "求 $\\beta$ 偏导数：\n",
+    "$$\\frac{\\partial E{(\\beta)}}{\\partial \\beta}=-2\\boldsymbol{x}^T\\boldsymbol{y}+2\\boldsymbol{x}^T\\boldsymbol{x}\\boldsymbol{\\beta}$$\n",
     "令 $\\beta$ 偏导数为0，可以解得 $\\hat \\beta$：\n",
     "$${\\boldsymbol{\\hat \\beta}}=\\left(\\boldsymbol{x}^{T}\\boldsymbol{x}\\right)^{-1}\\boldsymbol{x}^{T}\\boldsymbol{y}$$\n"
    ]
