--- a/模型相关/优化模型.ipynb
+++ b/模型相关/优化模型.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "### 爬山算法\n",
-    "爬山算法是一种比较简单的greedy算法。该算法每次从当前解的临近解空间中选择一个最优解作为当前解，直到达到一个局部最优解。问题是容易达到局部最优而不是全局最优。比如在下图中从 C 点出发，爬山算法只会取到A点，因为A点已经达到局部最优。"
+    "爬山算法是一种比较简单的greedy算法(https://www.geeksforgeeks.org/greedy-algorithms/)。该算法每次从当前解的临近解空间中选择一个最优解作为当前解，直到达到一个局部最优解。问题是容易达到局部最优而不是全局最优。比如在下图中从 C 点出发，爬山算法只会取到A点，因为A点已经达到局部最优。"
    ]
   },
   {
@@ -177,6 +177,15 @@
     "    # Cooling\n",
     "    T = T * a\n",
     "print(x, x_function(x))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 范例2: 旅行商最短路径问题\n",
+    "问题定义：https://en.wikipedia.org/wiki/Travelling_salesman_problem"
    ]
   },
   {
