--- a/模型相关/优化模型.ipynb
+++ b/模型相关/优化模型.ipynb
@@ -726,7 +726,7 @@
    "metadata": {},
    "source": [
     "接下来介绍基本过程：  \n",
-    "求 $f(x)=\\$ x^{\\wedge} 2 \\$$ 极大值问题, 设自变量 $x$ 介于 $0 \\sim 31$, 求其二次函数的最大值, 即: $\\max f(x)=$ $\\$ x^{\\wedge} 2 \\$, x \\in[0,31]$\n",
+    "求 $f(x)= x^2 $ 极大值问题, 设自变量 $x$ 介于 $0 \\sim 31$, 求其二次函数的最大值, 即: $\\max f(x)=$ $\\$ x^{\\wedge} 2 \\$, x \\in[0,31]$\n",
     "1. 编码 遗传算法首先要对实际问题进行编码, 用字符串表达问题。这种字符串相当于遗传学中 的染色体。每一代所产生的字符串个体总和称为群体。为了实现的方便, 通常字符串长度固定, 字 符选0或1。本例中, 利用 5 位二进制数表示 $x$ 值, 采用随机产生的方法, 假设得出拥有四个个体的 初始群体, 即: 01101,11000 , 01000,10011 。值相应为 $13,24,8, 19$。\n",
     "2. 计算适应度 衡量字符串（染色体）好坏的指标是适应度，它也就是遗传算法的目标函数。本例中用$x^2$计算。\n",
     "3. 复制 根据相对适应度的大小对个体进行取舍，2号个体性能最优，予以复制繁殖。3号个体性能最差，将它删除，使之死亡。（但一切以概率选择而成）\n",
