--- a/2022TaskB/Problem_2.ipynb
+++ b/2022TaskB/Problem_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,54 +12,46 @@
     "from sklearn import linear_model\n",
     "import time\n",
     "import random\n",
-    "import copy\n"
+    "import copy\n",
+    "import math\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 260,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7420"
-      ]
-     },
-     "execution_count": 192,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 现在要对5个州做一个总的用水用电的水分配方案（分别给多少水，给多少电 -> 存多少水）\n",
-    "# ai = 5个州的分别的总用水需求，bi = 5个州分别的用电需求 -> 转化为5个州的存水需求 wi\n",
-    "# 求最优的ai、wi，再计算得到最优的ai、bi\n",
+    "# a = 5个州的分别的总用水需求，b = 5个州分别的用电需求 -> 转化为5个州的存水需求 w\n",
+    "# 求最优的a、w，再计算得到最优的a、b\n",
     "# 最优的评判：满足总和小于等于 M_v + P_v 的前提下，得分score()最高\n",
-    "# Ai = 实际总用水， Bi = 实际总用电\n",
+    "# A = 5州分别实际总用水， B = 5州分别实际总用电\n",
     "# (2015 data)\n",
     "M_v = 4207.6251\n",
     "P_v = 3212.9429\n",
     "N = int(M_v + P_v)\n",
-    "Ai = eval(\"\"\"[4632.39\n",
+    "bitlength = N.bit_length()\n",
+    "A = eval(\"\"\"[4632.39\n",
     "20171.5\n",
     "7849.86\n",
     "2203.23\n",
     "9412.49]\"\"\".replace('\\n', ','))\n",
-    "Bi = eval(\"\"\"316.5298945\n",
+    "B = eval(\"\"\"316.5298945\n",
     "480.7151231\n",
     "147.2743259\n",
     "94.57796014\n",
     "151.905041\"\"\".replace('\\n', ','))\n",
-    "Ai, Bi = np.array(Ai), np.array(Bi)\n",
-    "Ai = Ai / 1e3\n",
-    "Bi = Bi / 365\n",
-    "N"
+    "A, B = np.array(A), np.array(B)\n",
+    "A = A / 1e3\n",
+    "B = B / 365\n",
+    "\n",
+    "N_GENERATIONS=100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,96 +59,114 @@
     "def w2e(x): return 0.0010 * x + 26.2830\n",
     "def e2w(y): return (y - 26.2830) / 0.0010\n",
     "\n",
+    "a_prime = np.append(A, A+1)\n",
+    "lamb = 1e-7\n",
     "m=1\n",
-    "def score(a, a_prime, m):\n",
-    "    return m / a_prime - m / a\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.86720519 1.31702773 0.4034913  0.2591177  0.41617819] [-25415.79480959 -24965.97226548 -25879.50869616 -26023.88230099\n",
-      " -25866.82180548]\n",
-      "[ 4.63239    20.1715      7.84986     2.20323     9.41249     0.86720519\n",
-      "  1.31702773  0.4034913   0.2591177   0.41617819]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(Bi, e2w(Bi))\n",
-    "Ai = np.append(Ai, Bi)\n",
+    "def score(ai, a_primei, m):\n",
+    "    value = m / a_primei - m / ai\n",
+    "    if value == 0:\n",
+    "        value += lamb\n",
+    "    else:\n",
+    "        value -= lamb\n",
+    "    return value\n",
     "\n",
-    "print(Ai)\n"
+    "\n",
+    "def evaluate(a, a_prime, m):\n",
+    "    product = 1\n",
+    "    for i in range(len(a)):\n",
+    "        product = product + score(a[i], a_prime[i], m)\n",
+    "    return math.pow(product, 0.5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
     "def init_random():\n",
     "    x, tmp = [], []\n",
     "    for i in range(9):\n",
-    "        ran = random.randint(0, N)\n",
-    "        if ran not in tmp and ran != 0 and ran != N:\n",
-    "            tmp.append(ran)\n",
+    "        r = random.randint(0, N)\n",
+    "        if r not in tmp and r != 0 and r != N:\n",
+    "            tmp.append(r)\n",
+    "    tmp.sort()\n",
     "    x.append(tmp[0])\n",
     "    for i in range(1, 9):\n",
     "        x.append(tmp[i]-tmp[i-1])\n",
-    "    x.append()\n",
+    "    x.append(N-tmp[-1])\n",
     "    return x\n",
     "\n",
     "def swap(x):\n",
-    "    new_x = [] * len(x)\n",
-    "    x2 = copy.copy(x)\n",
-    "    np.random.shuffle(x)\n",
+    "    new_x = [0] * len(x)\n",
+    "    x_copy = copy.copy(x)\n",
+    "    np.random.shuffle(x_copy)\n",
     "    bitlength = N.bit_length()\n",
-    "    for i in range(0, len(x)-1, 2):\n",
-    "        s = random.randint(0, bitlength)\n",
-    "        new_x[x2.index(x[i])] = bin(x[i])[2:].zfill(bitlength)[:s] + bin(x[i+1])[2:].zfill(bitlength)[s:]\n",
-    "        new_x[x2.index(x[i+1])] = bin(x[i+1])[2:].zfill(bitlength)[:s] + bin(x[i])[2:].zfill(bitlength)[s:]\n"
+    "    for i in range(0, len(x_copy), 2):\n",
+    "        s = random.randint(0, bitlength-1)\n",
+    "        new_x[x.index(x_copy[i])] = int((bin(x_copy[i])[2:]).zfill(bitlength)[:s] + (bin(x_copy[i+1])[2:]).zfill(bitlength)[s:],2)\n",
+    "        new_x[x.index(x_copy[i+1])] = int(bin(x_copy[i+1])[2:].zfill(bitlength)[:s] + bin(x_copy[i])[2:].zfill(bitlength)[s:],2)\n",
+    "    return new_x\n",
+    "\n",
+    "def mutation(x):\n",
+    "    new_x = [0] * len(x)\n",
+    "    x_copy = copy.copy(x)\n",
+    "    for i in range(len(x_copy)):\n",
+    "        r = random.randint(0, bitlength-1)\n",
+    "        x_copy_bin = (bin(x_copy[i])[2:]).zfill(bitlength)\n",
+    "        x_copy_bin = x_copy_bin[:r] + str((int(x_copy_bin[r])+1) % 2) + x_copy_bin[r+1:]\n",
+    "        new_x[i] = int(x_copy_bin, 2)\n",
+    "    return new_x\n",
+    "\n",
+    "def check(x):\n",
+    "    if 0 in x:\n",
+    "        return False\n",
+    "    s = sum(x)\n",
+    "    if s > N:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3708, 4977, 2726, 915, 4060, 6979, 6978, 2670, 4488]\n",
-      "1101101000011 1101101000010\n",
-      "1101101000010 1101101000011\n",
-      "0001110010011 1000110001000\n",
-      "0001110011000 1000110000011\n",
-      "1001101110001 0111111011100\n",
-      "1001101011100 0111111110001\n",
-      "0111001111100 0101010100110\n",
-      "0111010100110 0101001111100\n"
+      "[470, 437, 449, 569, 646, 144, 281, 2169, 295, 920]\n"
      ]
     }
    ],
    "source": [
-    "x = init_random()\n",
-    "print(x)\n",
-    "swap(x)"
+    "best_score = 0\n",
+    "next_x = init_random()\n",
+    "for _ in range(N_GENERATIONS):\n",
+    "    x = next_x\n",
+    "    x_score = evaluate(x, a_prime, m)\n",
+    "    if x_score > best_score:\n",
+    "        best_score = x_score\n",
+    "        best = x\n",
+    "    y = swap(x)\n",
+    "    if not check(y):\n",
+    "        y = x\n",
+    "    y_score = evaluate(y, a_prime, m)\n",
+    "    if y_score > best_score:\n",
+    "        best_score = y_score\n",
+    "        best = y\n",
+    "    z = mutation(y)\n",
+    "    if not check(z):\n",
+    "        z = y\n",
+    "    z_score = evaluate(z, a_prime, m)\n",
+    "    if x_score > best_score:\n",
+    "        best_score = z_score\n",
+    "        best = z\n",
+    "    next_x = z\n",
+    "print(best)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
