--- a/2022TaskB/Problem_2.ipynb
+++ b/2022TaskB/Problem_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 534,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "# (2019 data)\n",
     "M_v = 4207.6251 - 0.402866840525917\n",
     "P_v = 3212.9429 - 192.830940038404\n",
-    "N = int((M_v*1e4 + P_v*1e4)/166.0947)\n",
+    "N = int((M_v*1e4 + P_v*1e4)/153.76)\n",
     "bitlength = N.bit_length()\n",
     "A = eval(\"\"\"[4632.39\n",
     "20171.5\n",
@@ -51,25 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the corresponding water storage to meet elec requirement is 313.7679698096622\n",
+      "the corresponding water storage to meet elec requirement is 270.7087197533129\n",
       "[  4.63239     20.1715       7.84986      2.20323      9.41249\n",
-      "  83.38937604 126.64375424  38.79922357  24.91643671  40.01917925]\n",
-      "44.6767\n",
-      "358.03743980966215\n"
+      "  71.94562033 109.26408006  33.47469835  21.49708489  34.52723612]\n",
+      "47.0039\n",
+      "314.9781897533129\n"
      ]
     }
    ],
    "source": [
     "# 因为目前只有两个水坝分别的水电转换的关系式，应该需要再拟合一个总的： y = 9.6416 * lnx + -52.1632\n",
     "def w2e(x): return 9.6416 * np.log(x) + -52.1632\n",
-    "def e2w(y): return np.exp((y + 52.1632) / 9.6416)\n",
+    "def e2w(y): return np.exp((y + 50.74) / 9.6416)\n",
     "print(\"the corresponding water storage to meet elec requirement is\", e2w(np.sum(B)))\n",
     "ratio = B/sum(B)\n",
     "a_prime = np.append(A, e2w(np.sum(B)) * 1e4 * ratio)\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,15 +140,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 538,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.9802 4.1536 3.6863 6.5536 3.9802 3.6863 6.5536 3.891  3.2767 4.9152] -0.1292864635735624\n",
-      "[-0.03537236719497889, -0.1911801124311265, -0.14388391293904587, 0.30129118691116286, -0.1450018433573778, -0.2592827846349375, -0.14469172546459316, -0.2312296294076371, -0.2650509450967298, -0.17846250212036047]\n",
+      "result is \n",
+      "-------------------------\n",
+      "The demand is  [  4.63239     20.1715       7.84986      2.20323      9.41249\n",
+      "  71.94562033 109.26408006  33.47469835  21.49708489  34.52723612]\n",
+      "The real distribution is  [ 3.7393  1.6383  3.1377  6.5536  1.6319  2.4503  6.5537  6.5536  1.6383\n",
+      " 13.1072]\n",
+      "The best score is  -0.22805000859112332\n",
+      "[-0.051558443934992246, -0.5608139224038264, -0.19131397678899836, 0.30129118691116286, -0.5065408332551596, -0.3942139055274995, -0.14343342379748814, -0.12271458184575978, -0.5638708825643599, -0.047331302704311934]\n",
       "0.0\n"
      ]
     }
@@ -179,7 +185,11 @@
     "        best = z\n",
     "    next_x = best\n",
     "best = np.array(best)\n",
-    "print(best/1e4, best_score * 1e4)\n",
+    "print(\"result is \")\n",
+    "print(\"-------------------------\")\n",
+    "print(\"The demand is \", a_prime/1e4)\n",
+    "print(\"The real distribution is \", best/1e4)\n",
+    "print(\"The best score is \" ,best_score * 1e4)\n",
     "print([score(best[i], a_prime[i], m) * 1e4 for i in range(len(best))])\n",
     "print(abs(np.sum(best) - N)/1e4)"
    ]
