--- a/2022TaskB/Problem_2.ipynb
+++ b/2022TaskB/Problem_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "# (2019 data)\n",
     "M_v = 4207.6251 - 0.402866840525917\n",
     "P_v = 3212.9429 - 192.830940038404\n",
-    "N = int((M_v*1e4 + P_v*1e4)/153.76)\n",
+    "N = int((M_v*1e4 + P_v*1e4)/3.22321112134556)\n",
     "bitlength = N.bit_length()\n",
     "A = eval(\"\"\"[4632.39\n",
     "20171.5\n",
@@ -51,25 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the corresponding water storage to meet elec requirement is 270.7087197533129\n",
+      "the corresponding water storage to meet elec requirement is 896.9949565709472\n",
       "[  4.63239     20.1715       7.84986      2.20323      9.41249\n",
-      "  71.94562033 109.26408006  33.47469835  21.49708489  34.52723612]\n",
-      "47.0039\n",
-      "314.9781897533129\n"
+      " 238.39224184 362.0471806  110.91861251  71.23071892 114.4062027 ]\n",
+      "2242.2776\n",
+      "941.2644265709471\n"
      ]
     }
    ],
    "source": [
-    "# 因为目前只有两个水坝分别的水电转换的关系式，应该需要再拟合一个总的： y = 9.6416 * lnx + -52.1632\n",
-    "def w2e(x): return 9.6416 * np.log(x) + -52.1632\n",
-    "def e2w(y): return np.exp((y + 50.74) / 9.6416)\n",
+    "# 因为目前只有两个水坝分别的水电转换的关系式，应该需要再拟合一个总的： y = 1.1370 lnx + -4.4675\n",
+    "def w2e(x): return 1.1370 * np.log(x) + -4.4675\n",
+    "def e2w(y): return np.exp((y + 4.4675) / 1.1370)\n",
     "print(\"the corresponding water storage to meet elec requirement is\", e2w(np.sum(B)))\n",
     "ratio = B/sum(B)\n",
     "a_prime = np.append(A, e2w(np.sum(B)) * 1e4 * ratio)\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -150,11 +150,11 @@
       "result is \n",
       "-------------------------\n",
       "The demand is  [  4.63239     20.1715       7.84986      2.20323      9.41249\n",
-      "  71.94562033 109.26408006  33.47469835  21.49708489  34.52723612]\n",
-      "The real distribution is  [ 3.7393  1.6383  3.1377  6.5536  1.6319  2.4503  6.5537  6.5536  1.6383\n",
-      " 13.1072]\n",
-      "The best score is  -0.22805000859112332\n",
-      "[-0.051558443934992246, -0.5608139224038264, -0.19131397678899836, 0.30129118691116286, -0.5065408332551596, -0.3942139055274995, -0.14343342379748814, -0.12271458184575978, -0.5638708825643599, -0.047331302704311934]\n",
+      " 238.39224184 362.0471806  110.91861251  71.23071892 114.4062027 ]\n",
+      "The real distribution is  [207.7182 207.7183 226.0992 222.8228 181.8623 213.0166 157.2863 222.8228\n",
+      " 183.5007 419.4304]\n",
+      "The best score is  0.09442982796191357\n",
+      "[0.21105707425998194, 0.04476068294797619, 0.12296796956038555, 0.4493912064565426, 0.10074314699154965, -0.000499702439394714, -0.003595761868441889, 0.004527748367493018, 0.008589316312806034, 0.006356599030236834]\n",
       "0.0\n"
      ]
     }
@@ -197,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "SILENT",
    "language": "python",
    "name": "python3"
   },
@@ -211,12 +211,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "19f09cf2eddec64482a34667392e5f7909b14c50127e00aaec2a5f5b7afabf58"
+    "hash": "33a00747c7c616a6e1f951908c7a8e16aa8bdee44e4bbac794a20c5a719e4c26"
    }
   }
  },
