--- a/2022TaskB/Problem_2.ipynb
+++ b/2022TaskB/Problem_2.ipynb
@@ -197,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SILENT",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -211,12 +211,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "33a00747c7c616a6e1f951908c7a8e16aa8bdee44e4bbac794a20c5a719e4c26"
+    "hash": "19f09cf2eddec64482a34667392e5f7909b14c50127e00aaec2a5f5b7afabf58"
    }
   }
  },
