--- a/2021TaskA/dataPreProcessing.ipynb
+++ b/2021TaskA/dataPreProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fungi_density_all = pd.DataFrame(solution, columns=[\"p.sang.s\", \"t.chion.n\", \"x.sub.s\"])\n",
+    "fungi_density = fungi_density_all.iloc[99::100, 0:3:]\n",
+    "fungi_density = pd.DataFrame(\n",
+    "    np.insert(fungi_density.values, 0, values=np.array(fungi_density_all.iloc[0]), axis=0), columns=[\"p.sang.s\", \"t.chion.n\", \"x.sub.s\"])\n",
+    "fungi_density.to_csv(\"./3fungi_data/fungi_density_dispersed.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +244,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     p.sang.s     t.chion.n       x.sub.s\n",
+      "0    0.003068  2.381967e-03  7.008197e-04\n",
+      "1    0.003252  2.502985e-03  7.032414e-04\n",
+      "2    0.003447  2.629798e-03  7.056157e-04\n",
+      "3    0.003653  2.762657e-03  7.079401e-04\n",
+      "4    0.003871  2.901815e-03  7.102124e-04\n",
+      "..        ...           ...           ...\n",
+      "995  0.460205  1.517285e-08 -5.511819e-15\n",
+      "996  0.460205  1.490349e-08 -5.820127e-15\n",
+      "997  0.460205  1.463893e-08 -6.109425e-15\n",
+      "998  0.460205  1.437909e-08 -6.378524e-15\n",
+      "999  0.460205  1.412385e-08 -6.626236e-15\n",
+      "\n",
+      "[1000 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Decomposition_speed_all = pd.DataFrame({\n",
+    "    \"p.sang.s\": p_Decomposition_speed, \n",
+    "    \"t.chion.n\": t_Decomposition_speed, \n",
+    "    \"x.sub.s\": x_Decomposition_speed})\n",
+    "print(Decomposition_speed_all)\n",
+    "Decomposition_speed = Decomposition_speed_all.iloc[99::100, 0:3:]\n",
+    "Decomposition_speed = pd.DataFrame(\n",
+    "    np.insert(Decomposition_speed.values, 0, values=np.array(Decomposition_speed_all.iloc[0]), axis=0), columns=[\"p.sang.s\", \"t.chion.n\", \"x.sub.s\"])\n",
+    "Decomposition_speed.to_csv(\"./3fungi_data/Decomposition_speed_dispersed.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
