--- a/Exercises/模型相关/评价模型.ipynb
+++ b/Exercises/模型相关/评价模型.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "       [100. , 100. ,  92.9, 100. ,  90. , 100. , 100. , 100. , 100. ]])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The max eigenvalue is: 3.0\n",
+      "The index of the max eigenvalue is: 0\n",
+      "The weights are: [0.28571429 0.14285714 0.57142857]\n",
+      "The consistency index is: 0.0\n",
+      "The random index is: 0.58\n",
+      "The consistency ratio is: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "### First input the judgement matrix\n",
+    "A = [[1,2,1/2],[1/2,1,1/4],[2,4,1]]\n",
+    "### Use np.linalg.eig to calculate the eigenvalues and eigenvectors\n",
+    "eigenvalues, eigenvectors = np.linalg.eig(A)\n",
+    "max_eigenvalue = np.real(max(eigenvalues))\n",
+    "max_eigenvalue_index = np.where(eigenvalues == max_eigenvalue)[0][0]\n",
+    "print(\"The max eigenvalue is: {}\".format(max_eigenvalue))\n",
+    "print(\"The index of the max eigenvalue is: {}\".format(max_eigenvalue_index))\n",
+    "### Find the corresponding eigenvector, use np.real to get the real part of the complex number\n",
+    "max_eigenvector = np.real(eigenvectors[:, max_eigenvalue_index])\n",
+    "### Normalize the eigenvector\n",
+    "max_eigenvector = max_eigenvector / np.sum(max_eigenvector)\n",
+    "print(\"The weights are: {}\".format(max_eigenvector))\n",
+    "### Test the consistency\n",
+    "RI_list = [0, 0, 0.58, 0.9, 1.12, 1.24, 1.32, 1.41, 1.45, 1.49]\n",
+    "CI = (max_eigenvalue - len(A)) / (len(A) - 1)\n",
+    "print(\"The consistency index is: {}\".format(CI))\n",
+    "RI = RI_list[len(A) - 1]\n",
+    "print(\"The random index is: {}\".format(RI))\n",
+    "CR = CI / RI\n",
+    "print(\"The consistency ratio is: {}\".format(CR))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
